# r2c-clippy

./: .gitignore  Dockerfile  LICENSE-MIT  README.md  analyzer.json  r2c_feedback.md  results.py
input_gen/: Cargo.toml  input.json
input_gen/src/: main.rs
src/: analyze.sh
src/analyzer/: Cargo.toml
src/analyzer/src/: main.rs
