[package]
name = "input_gen"
version = "0.1.0"
authors = ["flip1995 <hello@philkrones.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
crates_io_api = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
